--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/home/login.js" ></script>
+    <script src="/js/home/login.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <form>  
-        <input type="text" placeholder="ID"/>
-        <input type="text" placeholder="Password"/>
-        <input type="submit" value="login"/>
+        <input id="id" type="text" placeholder="ID"/>
+        <input id="password" type="text" placeholder="Password"/>
+        <button type="submit">login</button>
     </form>
 </body>
 </html>
