회원가입 페이지

--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -12,10 +12,12 @@
     <div class="login-page">
         <div class="form">
             <form class="login-form">
+                <input type="text" id="name" placeholder="username"/>
                 <input type="text" id="id" placeholder="id"/>
                 <input type="password" id="password" placeholder="password"/>
-                <button>login</button>
-                <p class="message">Not registered? <a href="/register">Create an account</a></p>
+                <input type="password" id="password2" placeholder="check password"/>
+                <button>signup</button>
+                
             </form>
         </div>
     </div>
