--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home/login.css"/>
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <div class="login-page">
         <div class="form">
             <form class="login-form">
-                <input type="text" id="name" placeholder="username"/>
+                <input type="text" id="username" placeholder="username"/>
                 <input type="text" id="id" placeholder="id"/>
                 <input type="password" id="password" placeholder="password"/>
-                <input type="password" id="password2" placeholder="check password"/>
+                <input type="password" id="password-check" placeholder="check password"/>
                 <button>signup</button>
-                
             </form>
         </div>
     </div>
